--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stripe-menu-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tony40508.github.io/stripe-menu-clone",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
